refactor: general ref to open api schemas and specifications to stick to the impl
