# docs/api/openapi/device/specification.yml
@@ -4,14 +4,14 @@ info:
     description: Device management and monitoring microservice API
     version: 1.0.0
 tags:
-    - name: Devices
-      description: Operations related to devices
+    -   name: Devices
+        description: Operations related to devices
 
 paths:
     /devices:
         get:
             summary: Get all devices
-            tags: [Devices]
+            tags: [ Devices ]
             responses:
                 200:
                     description: The list of all devices to which the user has access
@@ -25,7 +25,7 @@ paths:
                     description: User not authorized
         post:
             summary: Join a new device to the system
-            tags: [Devices]
+            tags: [ Devices ]
             requestBody:
                 required: true
                 content:
@@ -39,16 +39,31 @@ paths:
                     description: The request was invalid
                 403:
                     description: User not authorized
+    /devices/actives:
+        get:
+            summary: Get all active devices
+            tags: [ Devices ]
+            responses:
+                200:
+                    description: The list of all active devices
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    $ref: "./schemas.yml#/components/schemas/Device"
+                403:
+                    description: User not authorized
     /devices/{id}:
         get:
             summary: Get a device by id
-            tags: [Devices]
+            tags: [ Devices ]
             parameters:
-                - in: path
-                  name: id
-                  required: true
-                  schema:
-                      $ref: "./schemas.yml#/components/schemas/DeviceId"
+                -   in: path
+                    name: id
+                    required: true
+                    schema:
+                        $ref: "./schemas.yml#/components/schemas/DeviceId"
             responses:
                 200:
                     description: The device with the specified ID
@@ -63,13 +78,13 @@ paths:
 
         put:
             summary: Update a device
-            tags: [Devices]
+            tags: [ Devices ]
             parameters:
-                - in: path
-                  name: id
-                  required: true
-                  schema:
-                      $ref: "./schemas.yml#/components/schemas/DeviceId"
+                -   in: path
+                    name: id
+                    required: true
+                    schema:
+                        $ref: "./schemas.yml#/components/schemas/DeviceId"
             requestBody:
                 required: true
                 content:
@@ -85,13 +100,13 @@ paths:
                     description: User not authorized
         delete:
             summary: Delete a device
-            tags: [Devices]
+            tags: [ Devices ]
             parameters:
-                - in: path
-                  name: id
-                  required: true
-                  schema:
-                      $ref: "./schemas.yml#/components/schemas/Device"
+                -   in: path
+                    name: id
+                    required: true
+                    schema:
+                        $ref: "./schemas.yml#/components/schemas/Device"
             responses:
                 204:
                     description: The resource was deleted successfully
